<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Felix Bechstein
	-->
	<!--
		This file is part of WebSMS. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<resources>
	<string name="app_name">WebSMS Connector: o2</string>
	<string name="connector_o2_author">Felix Bechstein &lt;f@ub0r.de&gt;, Lorenz Bauer</string>
	<string name="connector_o2_name">o2</string>
	<string name="connector_o2_preferences">Preferences - o2</string>
	<string name="enable_o2">Enable o2</string>
	<string name="password_o2_hint">For o2online.de</string>
	<string name="missing_freesms">Failed to retrieve free sms count.\nPlease check the o2 Communication Center with your browser.</string>
	<string name="ignore_invalid_cert">Ignore invalid SSL certificates</string>
	<string name="ignore_invalid_cert_hint">Temporary fix if sending fails. SMS are not sent securely.</string>
	<string name="error_invalid_cert">The Server did not properly identify itself (invalid SSL certificate). Please update this connector. If the problem persists, try turning on \'Ignore invalid SSL certificates\' in settings.</string>
	<string name="custom_sender">Custom username</string>
	<string name="custom_sender_hint">Usually your O2 phone number.</string>
	<string name="password">Password</string>
	<string name="use_default_sender">Use WebSMS default sender</string>
	<string name="use_default_sender_hint">As username for o2online.de.</string>
	<string name="error_custom_sender">Custom sender mustn\'t be longer than 12 characters</string>
</resources>
