<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Felix Bechstein
	-->
	<!--
		This file is part of WebSMS. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/connector_o2_preferences">
	<CheckBoxPreference android:key="enable_o2"
		android:title="@string/enable_o2" />
	<EditTextPreference android:key="password_o2"
		android:title="@string/password" android:dialogTitle="@string/password"
		android:summary="@string/password_o2_hint" android:dependency="enable_o2" android:inputType="textPassword"/>
	<CheckBoxPreference android:key="use_default_sender"
		android:defaultValue="true" android:title="@string/use_default_sender"
		android:summary="@string/use_default_sender_hint"
		android:disableDependentsState="true" android:dependency="enable_o2" />
	<EditTextPreference android:key="custom_sender"
		android:title="@string/custom_sender" android:dialogTitle="@string/custom_sender"
		android:summary="@string/custom_sender_hint" android:dependency="use_default_sender" />
	<CheckBoxPreference android:title="@string/ignore_invalid_cert" android:summary="@string/ignore_invalid_cert_hint" android:dependency="enable_o2" android:key="ignore_invalid_cert"></CheckBoxPreference>
</PreferenceScreen>
